@@ -1,3 +1,8 @@
+2004-07-10  Karl Runge <runge@karlrunge.com>
+	* -norepeat to turn off X server autorepeat when clients exist,
+	  (this is workaround for the repeating keystroke bug.  Note that
+	  client side does autorepeating so not a big loss).
+
 2004-07-04  Karl Runge <runge@karlrunge.com>
 	* extend -allow to re-read a file with allowed IP addresses. 
 	* improvements to -help text.
