@@ -1,3 +1,7 @@
+2004-07-10  Karl Runge <runge@karlrunge.com>
+	* x11vnc: norepeat to turn off X server autorepeat when clients exist,
+	  let the client side do the autorepeating.
+
 2004-06-26  Karl Runge <runge@karlrunge.com>
 	* x11vnc: add "-scale fraction" for global server-side scaling.
 
